Fix newsletter wrapping Make carousel buttons scale with size

--- a/_sass/_main_page.scss
+++ b/_sass/_main_page.scss
@@ -32,9 +32,9 @@
 
   > aside {
     position: absolute;
-    z-index: 10;
+    z-index: 2;
     height: 100%;
-    width: 10rem;
+    width: 10vw;
 
     display: flex;
     justify-content: center;
@@ -43,11 +43,15 @@
     &:hover {
       background-color: transparentize(#000, 0.5);
       transition: all 1s;
+
+      span {
+        color: transparentize(#fff, 0.1);
+      }
     }
 
     span {
-      font-size: 10rem;
-      color: #fff;
+      font-size: 10vw;
+      color: transparentize(#fff,0.3);
     }
   }
 }
@@ -114,6 +118,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
   }
 
   input[name='email'] {
